--- a/workshop_app/static/workshop_app/css/base.css
+++ b/workshop_app/static/workshop_app/css/base.css
@@ -2,18 +2,18 @@
  * Footer Styles
  */
 .navbar {
-    z-index: 1000;
+  z-index: 1000;
 }
 .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #61615F;
-    color: white;
-    text-align: center;
-    z-index: 100;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #61615f;
+  color: white;
+  text-align: center;
+  z-index: 100;
 }
 .base-content {
-    padding-top: 5em;
-    padding-bottom: 5em;
+  padding-top: 5em;
+  padding-bottom: 5em;
 }
